css/media-query.css
@media only screen and (max-width: 1600px) {
  body section.content.one .right-container {
    opacity: 0;
  }
}

@media only screen and (max-width: 1500px) {
  body > *:not(footer) {
    padding: 0px 100px 0px 100px !important;
  }

  html {
    font-size: clamp(5px, 2vw, 20px);
  }

  html body {
    grid-template-columns: minmax(100px, 1fr);
    grid-template-rows: 100px calc(100vh - 100px) 1fr auto 0.25fr 50px;
    justify-content: center;
    text-align: center;
  }

  html body section.content.one {
    display: flex !important;
    top: 50px;
  }

  html body section.content.one .left-container h1 {
    line-height: -30px;
  }

  html body section.content.one .left-container p {
    width: 100% !important;
  }

  html body section.content.one .left-container {
    bottom: 10%;
  }

  html body section.content.three {
    padding-bottom: 100px !important;
  }

  html body section.content.three .img-container img {
    height: 300px;
  }

  html body section.content.three .tech i {
    font-size: clamp(15px, 5vw, 50px);
  }

  html body section.content.three .tech img {
    width: clamp(15px, 5vw, 50px);
  }

  html body section.content.four .main-container {
    display: flex;
    flex-direction: column;
    padding: 35px;

    width: 700px;
    margin: 0 auto;
  }

  html body section.content.four .left-container,
  html body section.content.four .right-container {
    display: block;
    padding: 0;
  }

  html body section.content.four .left-container p {
    margin-top: 25px;
    margin-bottom: 30px;
  }

  html body section.content.four .right-container button {
    width: 80%;
  }

  html body section.content.two .top-container {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 100px;
    grid-auto-rows: 250px;
  }

  html body section.content.two .bottom-container {
    grid-template-columns: 1fr;
    grid-auto-flow: row;
    grid-auto-rows: 150px;
  }

  /* Background Abstract */
  html body section.content.one::after {
    background-image: url(../assets/abstract/abstract-5.svg);
    background-size: 25rem !important;
    background-position: center top !important;
    opacity: 0.15;
  }

  section.content.two::after {
    background-image: url(../assets/abstract/abstract-4.svg) !important;
    background-size: 35rem !important;
    right: 0 !important;
    left: 15vw !important;
    right: 0 !important;
    top: 60vh !important;
  }

  section.content.three::after {
    background: none !important;
    /* background-image: url(../assets/abstract/abstract-1.svg) !important;
    background-size: 15rem;
    background-position: top 50px right 250px; */
  }

  section.content.four .main-container::after {
    background-image: url(../assets/abstract/abstract-10.svg);
    background-size: 25rem;

    background-position: top 120px right -130px;
  }
}

@media only screen and (max-width: 1200px) {
  /* Top Container */

  html body section.content.three .img-container .content {
    font-size: 1rem;
  }
}

@media only screen and (max-width: 1000px) {
  body .line {
    width: 75%;
  }
}

@media only screen and (max-width: 800px) {
  body > *:not(footer) {
    padding: 0px 25px 0px 25px !important;
  }

  html body section.content.one .left-container span.span-one {
    display: block;
  }

  html body section.content.three .img-container img {
    height: 200px;
  }
}

@media only screen and (max-width: 342px) {
  html body section.content.one .left-container span.span-two {
    display: inline-block;
    margin-top: 60px;
  }

  html body section.content.three .img-container img {
    height: 100px;
  }

  html body section.content.four .main-container {
    padding: 10px 5px 10px 5px;
  }
}

